client/blocks/reader-full-post/style.scss
// Styles targeted at story content
@import './_content.scss';

.is-group-reader.has-no-sidebar {
	.masterbar {
		@include breakpoint-deprecated( '<660px' ) {
			display: none; // Hides masterbar in fullpost mobile
		}
	}
}

.reader-full-post.main {
	max-width: none;
	// Turns off the implicit positioning context set up by the normal main styles
	// This allows our fixed positioned elements to be positioned relative to the main html document
	backface-visibility: visible;
	perspective: none;
}

.reader-full-post__content {
	margin: 0 auto;

	@include breakpoint-deprecated( '>1280px' ) {
		width: 720px;
		padding-left: 260px;
	}

	@include breakpoint-deprecated( '1040px-1280px' ) {
		width: 720px;
		padding-left: 240px;
	}

	@include breakpoint-deprecated( '660px-1040px' ) {
		width: auto;
		margin: 0;
		padding-left: 240px;
	}

	@include breakpoint-deprecated( '<660px' ) {
		width: auto;
		padding: 0 20px;
	}
}

.reader-full-post__visit-site-container {
	background: var( --color-surface );
	border-bottom: 1px solid var( --color-neutral-0 );
	font-size: $font-body-extra-small;
	font-weight: 600;
	height: 46px;
	margin: 0;
	position: fixed;
	right: 0;
	top: 0;
	text-transform: uppercase;
	z-index: z-index(
		'.reader-full-post__sidebar-comment-like',
		'.reader-full-post__visit-site-container'
	);

	@include breakpoint-deprecated( '>660px' ) {
		border: 0;
		position: absolute;
		top: var( --masterbar-height );
		z-index: 0;
	}

	.external-link .gridicons-external {
		fill: var( --color-neutral-40 );
		top: 5px;

		@include breakpoint-deprecated( '>660px' ) {
			top: 3px;
		}
	}

	.external-link {
		color: var( --color-neutral-40 );
		display: block;
		padding: 10px 10px 15px 6px;

		@include breakpoint-deprecated( '>660px' ) {
			padding: 10px 20px 15px;
		}

		&:hover {
			color: var( --color-accent );

			.gridicons-external {
				fill: var( --color-accent );
			}
		}
	}

	.reader-full-post__visit-site-label {
		@include breakpoint-deprecated( '<660px' ) {
			display: none;
		}
	}
}

.reader-full-post__sidebar {
	width: 220px;
	position: fixed;
	text-align: center;

	@include breakpoint-deprecated( '>1280px' ) {
		left: calc( 50% - 490px );
	}

	@include breakpoint-deprecated( '1040px-1280px' ) {
		left: calc( 50% - 480px );
	}

	@include breakpoint-deprecated( '660px-1040px' ) {
		left: 20px;
	}

	@include breakpoint-deprecated( '<660px' ) {
		position: static;
		text-align: left;
		width: auto;
	}
}

.reader-full-post__seen-button {
	align-items: center;
	box-sizing: border-box;
	color: #646970;
	cursor: pointer;
	display: inline-flex;
	list-style-type: none;
	margin-left: 2px;
	padding: 4px;
	position: relative;
	top: 1px;
	user-select: none;

	@include breakpoint-deprecated( '<660px' ) {
		top: 12px;
	}
}

.reader-full-post__story {
	max-width: 720px;

	@include breakpoint-deprecated( '<480px' ) {
		font-size: $font-body;
		line-height: 24px;
	}

	@include breakpoint-deprecated( '<660px' ) {
		margin-top: -35px;
	}
}

.reader-full-post__story-content {
	color: var( --color-neutral-70 );
	/* stylelint-disable-next-line  declaration-property-unit-allowed-list */
	font-size: rem( 17px );
	line-height: 28px;
}

.reader-full-post__story-content img {
	margin-bottom: 12px;

	&.latex {
		margin-bottom: 0;
	}
}

.reader-full-post__story-content figure img {
	margin-bottom: 0;
}

.reader-full-post .back-button {
	@include breakpoint-deprecated( '<660px' ) {
		background: transparent;
		border-bottom: 0;
		position: fixed;
		width: 100px;
		z-index: z-index( '.reader-full-post__sidebar-comment-like', '.reader-full-post .back-button' );
	}
}

.reader-full-post .author-compact-profile {
	display: inline-flex;
	flex-direction: column;

	@include breakpoint-deprecated( '<660px' ) {
		margin-bottom: 35px;
		padding-right: 10px;
		position: relative;
		text-overflow: clip;
		white-space: nowrap;

		&::after {
			height: 40px;
		}

		&:not( .is-placeholder )::after {
			@include long-content-fade( $size: 15% );
		}
	}

	.reader-author-link {
		margin-top: 0;
	}

	@include breakpoint-deprecated( '<660px' ) {
		flex-direction: row;
		margin-top: 20px;

		.reader-avatar {
			flex: 1;
			margin: 0 0 0 -9px;

			&.has-site-and-author-icon,
			&.has-site-icon,
			&.has-gravatar {
				margin: 0 10px 5px 0;
			}

			&.has-gravatar {
				.gravatar {
					height: 32px !important;
					width: 32px !important;
					max-width: none;
				}
			}

			&.has-site-and-author-icon.has-site-icon.has-gravatar {
				margin-bottom: -15px;

				.gravatar {
					height: 24px !important;
					margin-right: 1em;
					position: relative;
					left: 18px;
					top: -18px;
					vertical-align: bottom;
					width: 24px !important;
				}
			}

			.site-icon {
				height: 32px !important;
				width: 32px !important;
				line-height: 32px !important;
				/* stylelint-disable-next-line  declaration-property-unit-allowed-list */
				font-size: rem( 32px ) !important;

				.gridicon {
					@include breakpoint-deprecated( '<660px' ) {
						height: 32px !important;
						width: 32px !important;
						line-height: 32px !important;
						/* stylelint-disable-next-line  declaration-property-unit-allowed-list */
						font-size: rem( 32px ) !important;
					}
				}
			}
		}

		.reader-author-link {
			font-weight: 600;
			display: inline;
			margin-right: 5px;

			&::after {
				content: ',';
				font-weight: 400;
			}
		}

		.author-compact-profile__site-link {
			flex: 1 0 0;
			display: inline;

			@include breakpoint-deprecated( '<660px' ) {
				margin-top: 0;
			}
		}

		.reader-author-link,
		.author-compact-profile__site-link {
			padding-top: 5px;
		}

		.author-compact-profile__follow .follow-button {
			position: fixed;
			left: calc( 100% - 270px );
			top: 5px;

			@include breakpoint-deprecated( '<660px' ) {
				background: transparent;
				position: fixed;
				z-index: z-index(
					'.reader-full-post__sidebar-comment-like',
					'.author-compact-profile__follow .follow-button'
				);

				.gridicon {
					height: 24px;
					top: 7px;
					width: 24px;
				}
			}
		}

		.author-compact-profile__follow-count {
			display: none;
		}

		.author-compact-profile__follow .follow-button__label {
			@include breakpoint-deprecated( '<660px' ) {
				display: none;
			}
		}
	}
}

.reader-full-post .reader-full-post__sidebar {
	color: var( --color-text-subtle );

	a.reader-author-link,
	a.author-compact-profile__site-link {
		color: var( --color-primary );

		&:hover {
			color: var( --color-primary-light );
		}
	}
}

// Action buttons in full-post
.reader-full-post .reader-post-actions {
	clear: both;
	margin-bottom: 20px;

	.post-edit-button__label,
	.reader-share__button-label,
	.comment-button__label,
	.like-button__label {
		/* stylelint-disable-next-line  declaration-property-unit-allowed-list */
		font-size: rem( 17px );
	}
}

.reader-full-post .like-button .gridicons-star {
	display: none;
}

.reader-full-post__sidebar-comment-like {
	align-items: center;
	display: flex;
	gap: 5px;
	justify-content: center;

	@include breakpoint-deprecated( '<660px' ) {
		align-items: flex-start;
		background: white;
		display: flex;
		border-bottom: 1px solid var( --color-neutral-0 );
		flex-direction: row;
		height: 47px;
		justify-content: flex-end;
		position: fixed;
		right: 60px;
		top: 0;
		width: 100%;
		z-index: z-index( 'root', '.reader-full-post__sidebar-comment-like' );
	}
}

.reader-full-post__sidebar .like-button {
	align-items: center;
	display: flex;
	gap: 5px;
	justify-content: center;

	@include breakpoint-deprecated( '<660px' ) {
		top: 9px;
	}

	.like-button__like-icons {
		top: 4px;
	}

	.like-button__label-status {
		display: none;
	}
}

.reader-full-post__sidebar .comment-button__label,
.reader-full-post__sidebar .like-button__label {
	font-size: $font-body-small;
}

.reader-full-post__sidebar .comment-button {
	align-items: center;
	display: flex;
	gap: 5px;
	justify-content: center;

	@include breakpoint-deprecated( '<660px' ) {
		top: 9px;
	}

	.comment-button__icon {
		margin-right: 0;
	}

	.comment-button__label-status {
		display: none;
	}
}

// Align meta info and post title
.reader-full-post .has-author-link .author-compact-profile__avatar-link {
	display: none;
}

.reader-full-post .has-author-link.has-author-icon {
	margin-top: 25px;

	@include breakpoint-deprecated( '>660px' ) {
		margin-top: 5px;
	}

	.reader-author-link {
		margin-top: 0;
	}

	.author-compact-profile__avatar-link {
		display: block;
	}
}

.reader-full-post .has-author-link {
	margin-top: 14px;
}

.reader-full-post .has-author-link .reader-author-link {
	@include breakpoint-deprecated( '>660px' ) {
		margin-top: 4px;
	}
}

// For posts without a title
.reader-full-post__header.is-missing-title {
	margin-top: 60px;

	.reader-full-post__header-meta {
		margin-bottom: 20px;
	}
}

.reader-full-post__header-title {
	clear: none;
	color: var( --color-neutral-70 );
	font-family: $serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	font-size: $font-title-medium;
	font-weight: 700;
	line-height: 34px;
	margin: 56px 0 0;
	max-width: 750px;

	@include breakpoint-deprecated( '>960px' ) {
		font-size: $font-headline-small;
		line-height: 46px;
	}

	@include breakpoint-deprecated( '480px-960px' ) {
		font-size: $font-title-large;
		line-height: 40px;
	}

	@include breakpoint-deprecated( '<660px' ) {
		margin-top: 8px;
	}

	.reader-full-post__header-title-link {
		display: block;
	}

	.reader-full-post__header-title-link,
	.reader-full-post__header-title-link:hover {
		color: var( --color-neutral-70 );
	}
}

.reader-full-post__header-meta {
	display: flex;
	flex-direction: row;
	font-size: $font-body;
	max-width: 750px;
}

.reader-full-post__header-date {
	line-height: 1.6;

	@include breakpoint-deprecated( '<480px' ) {
		line-height: 1.4;
	}
}

.reader-full-post__header-date-link {
	margin-right: 25px;
}

.reader-full-post__header-date-link,
.reader-full-post__header-date-link:visited {
	color: var( --color-text-subtle );

	&:hover {
		color: var( --color-primary-light );
	}
}

.reader-full-post .reader-post-card__tag-link {
	color: var(--color-neutral-80);
	font-size: 12px;
	margin-top: 2px;
	white-space: nowrap;
	cursor: pointer;
}

.reader-full-post .reader-post-card__tag-link:hover {
	color: var(--color-primary);
}

.reader-full-post__header {
	margin-bottom: 23px;
}

.reader-full-post__featured-image {
	margin: 28px 0 26px;
}

.reader-full-post__unavailable {
	.back-button__label {
		@include breakpoint-deprecated( '<660px' ) {
			display: inherit;
		}
	}
	.reader-full-post__content {
		@include breakpoint-deprecated( '<660px' ) {
			margin-top: 2em;
		}
	}
}
.reader-full-post__unavailable-body {
	margin-top: 2em;
}

// Placeholders
.reader-full-post__header-title,
.reader-full-post__header-date {
	&.is-placeholder {
		@include placeholder();
	}
}

.reader-full-post__header-date.is-placeholder {
	margin-top: 4px;
}

.reader-full-post__story-content-placeholder-text {
	@include placeholder();
	margin-bottom: 16px;
	min-height: 200px;
}

.post-edit-button {
	&:hover,
	&:focus,
	&:active {
		.gridicon {
			fill: var(--color-link);
		}

		.post-edit-button__label {
			color: var(--color-link);
		}
	}
}

.post-edit-button__label {
	display: none;
}

.reader-post-actions__item {
	&:hover,
	button.is-active {
		svg.reader-external path {
			fill: var(--color-link);
		}

		svg.reader-comment path,
		svg.reader-star path,
		svg.reader-share path {
			stroke: var(--color-link);
		}
	}
}

.reader-full-post__content .reader-post-actions__item {
	margin-right: 18px;

	.comment-button__label-count {
		top: 0;
	}
	.like-button__label-count {
		margin-left: 4px;
		top: 0;
	}
	.reader-share {
		position: relative;
		top: -1px;
	}
	.reader-share {
		margin-right: 0;
	}
}

.reader-full-post__content .reader-full-post__sidebar {
	.comment-button__label-count {
		top: 2px;
	}
	.like-button__label-count {
		top: 2px;
	}
}

